@@ -11,6 +11,13 @@ project's main git repository: [[https://github.com/captainflasmr/ollama-buddy
 
 * Versions
 
+** <2025-02-28> *0.2.3*
+
+Added Prompt History Support
+
+- Prompts are now integrated into the Emacs history mechanism which means they persist across sessions.  
+- Use =M-p= to navigate prompt history, and =M-p= / =M-n= within the minibuffer to insert previous prompts.  
+
 ** <2025-02-27> *0.2.2*
 
 Added support for role-based presets
